1. reposition the smiley face 2. increase board size, increase mine count. 3. introduce shift-click 4. remove solve and shuffle buttons 5. remove tile title

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -106,6 +106,11 @@ ul {
     height: 50px;
     text-align: right;
 }
+#sliding-advanced .smiley {
+    float: left;
+    width: 50%;
+    height: 10px;
+}
 #sliding-advanced .src input {
     width: 98%;
     font-family: "Courier New";
